fix: resolve SonarQube code quality issues